--- a/apps/embedded-setup/package.json
+++ b/apps/embedded-setup/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@workspace/ui-core": "workspace:*",
+    "@workspace/ui-embedded-setup": "workspace:*",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
