--- a/apps/embedded-setup/package.json
+++ b/apps/embedded-setup/package.json
@@ -7,14 +7,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint . --max-warnings 0",
+    "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@workspace/ui-core": "workspace:*",
     "@workspace/ui-embedded-setup": "workspace:*",
-    "next": "^15.2.6",
+    "next": "16.0.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
